# follower_mpcc

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: config.h  types.cpp  types.h
src/Constraints/: bounds.cpp  bounds.h  constraints.cpp  constraints.h
src/Cost/: cost.cpp  cost.h
src/MPC/: mpc.cpp  mpc.h
src/Models/: dynamic_bicycle.cpp  dynamic_bicycle.h  model_interface.h
src/Params/: bounds.json  cost.json  model.json  params.cpp  params.h
src/Solvers/: hpipm_interface.cpp  hpipm_interface.h  solver_interface.h
src/Splines/: cubic_spline.cpp  cubic_spline.h  cubic_spline2d.cpp  cubic_spline2d.h  track.h
src/Utils/: binary_search.cpp  binary_search.h
